--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IBIM</title>
+    <script type="module" src="components/mmcCard.js"></script>
     <link  rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>IBIM</title>
 </head>
 <body>
     <header>
         <h3>Projects</h3>
-    </header>
-
-    <div id="panelPrincipal" class="table1">
-        <div id="panel-1" class="panel">
-            <button id="btn-1"class="button">b1</button>
-        </div>
-        <div id="panel-2" class="panel">
-            <button id="btn-2"class="button">b2</button>
-        </div>
-        <div id="panel-3" class="panel">
-            <button id="btn-3"class="button">b3</button>
+    <div class="input-group">
+        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <div role="separator" class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+            </div>
         </div>
     </div>
-    <script src="Javascript/Table.js"></script>
-  
+    </header>
+    <div id="project-panel">
+    </div>
+    <script src="Javascript/dataResponse.js"></script>
 </body>
 </html>
