--- a/index.html
+++ b/index.html
@@ -4,30 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="components/mmcCard.js"></script>
-    <link  rel="stylesheet" href="styles.css">
+   <!--  <script type="module" src="components/mmcCard.js"></script> -->
+   <script type="module" src="components/mmcTable.js"></script>
+     <link  rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>IBIM</title>
 </head>
 <body>
     <header>
-        <h3>Projects</h3>
-    <div class="input-group">
-        <input type="text" class="form-control" aria-label="Text input with dropdown button">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div role="separator" class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-            </div>
-        </div>
-    </div>
+        <nav class="navbar navbar-light bg-light">
+            <h4>Projects</h4>
+            <span class="navbar-brand mb-0 h1">Navbar</span>
+            <button class=""></button>
+        </nav>
     </header>
-    <div id="project-panel">
+    
+    <div id="project-panel">       
+  <!--   <div id="table">
+        <table class="table">
+            <thead>
+                <tr >
+                    <th class="logo">logo</th>
+                    <th class="code">codigo</th>
+                    <th class="name">nombre</th>
+                    <th class="description">descripcion</th>  
+                </tr> 
+            </thead>
+            <tbody id="tableBody"> -->
+     
+            </tbody>
+        </table>
     </div>
+    </div>
+
+
     <script src="Javascript/dataResponse.js"></script>
 </body>
 </html>
