--- a/commit.html
+++ b/commit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="stylesheet" href="style.css">
     <title>look commit</title>
 </head>
 <body>
@@ -12,10 +13,22 @@
     </header>
 
     <div id="main-panel">
-        <div class="commitList">
-            
-
+        <div id="commitList">
+            <div class="title">Logo:</div>
+            <div class="logo text"><img src="D:\Nancy_Cursos\workspace\Practica_IBIM\images\Logo_IBIM.png" alt=""></div>
+            <div class="title">Code:</div>
+            <div class="code text">code</div>
+            <div class="title">Name:</div>
+            <div class="name text">name</div>
+            <div class="title">Description:</div>
+            <div class="description text">description</div>
         </div>
+        <div id="details">
+            <details>
+                <summary>Some details</summary>
+                <p>More info about the details.</p>
+            </details>
+        </div>  
 
     </div>
 
