Cambios generales tabla

--- a/PRUEBAS/commit.html
+++ b/PRUEBAS/commit.html
@@ -14,21 +14,14 @@
 
     <div id="main-panel">
         <div id="commitList">
-            <div class="title">Logo:</div>
-            <div class="logo text"><img src="D:\Nancy_Cursos\workspace\Practica_IBIM\images\Logo_IBIM.png" alt=""></div>
-            <div class="title">Code:</div>
-            <div class="code text">code</div>
-            <div class="title">Name:</div>
-            <div class="name text">name</div>
-            <div class="title">Description:</div>
-            <div class="description text">description</div>
+            
         </div>
-        <div id="details">
+        <!-- <div id="details">
             <details>
                 <summary>Some details</summary>
                 <p>More info about the details.</p>
             </details>
-        </div>  
+        </div> -->  
 
     </div>
 
