cambio codigo class project y añadido favorite

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h4>Projects</h4>
             </div>
             <div>
-                <button id="returnBtn">return</button>
+                <button id="returnBtn">return</button> <button id="favoriteBtn">Favorites</button>
             </div>
             <div>
                 <input class="radius seach-btn" type="text" value="" placeholder="&#x1F50E;&#xFE0E;">
