--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
    <script type="module" src="components/mmcCard.js"></script>
    <script src="/components/mmcProject.js"></script>
    <script type="module" src="/components/cardCommit.js"></script>
-   <!-- ss<script type="module" src="components/mmcTable.js"></script> -->
-   <!-- <script type="module" src="components/mmcTable2.js"></script> -->
      <link  rel="stylesheet" href="styles.css">
      <link  rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,7 +23,7 @@
                 <button id="returnBtn">return</button> <button id="favoriteBtn">Favorites</button>
             </div>
             <div>
-                <input class="radius seach-btn" type="text" value="" placeholder="&#x1F50E;&#xFE0E;">
+                <input  id="searchBtn" class="radius seach-btn" type="text" value="" placeholder="&#x1F50E;&#xFE0E;search">
             </div>
         </nav>
     </header>
@@ -38,19 +36,8 @@
 
 
     </div>
-   
- <!--    <div id="cardCommit">
-        <div class="codeCommit"><span class="fieldName">Code:</span></div>
-        <div class="tag"><span class="fieldName">Tag:</span></div>
-        <div class="description"><span class="fieldName">Description:</span></div>
-        <div class="active"><span class="fieldName">Active:</span></div>
-        <div class="VisorTitle"><span class="fieldName">Visor:</span></div>
-        <div class="path"><span class="fieldName">Path:</span></div>
-
-    </div> -->
-    
+ 
 
     <script src="Javascript/dataResponse.js"></script>
-    <!-- <script src="javascript/dataResponseCommit.js"></script> -->
 </body>
 </html>
